--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: left;
 }
 
 .footer {
